--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,98 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");/*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  outline: none;
+}
+
+body {
+  background: #fff9c4;
+  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+}
+body a {
+  text-decoration: none;
+  transition: color 600ms ease;
+}
+
+img {
+  max-width: 100%;
+}
+
+header {
+  width: 90%;
+  padding: 20px 5%;
+  background: #cbc693;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header .logo {
+  font-size: 25px;
+  font-weight: 700;
+}
+header .nav {
+  position: relative;
+  left: -50px;
+}
+header a {
+  margin: 0 15px;
+  display: inline-block;
+  color: black;
+}
+header a:hover {
+  color: coral;
+}
+header .menu {
+  cursor: pointer;
+  color: black;
+  font-size: 35px;
+}
+header .menu:hover {
+  color: coral;
+}
+
+.full-page {
+  height: 95vh;
+  background: url(/img/car2.jpg) no-repeat center center;
+  background-attachment: fixed;
+  background-size: cover;
+  background-blend-mode: multiply;
+  background-color: #3b3b3b;
+  text-align: center;
+  color: #fff9c4;
+}
+.full-page h1 {
+  padding-top: 250px;
+  font-size: 45px;
+  width: 500px;
+  margin: 0 auto;
+}
+.full-page h3 {
+  margin: 20px 0;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.full-page button {
+  padding: 15px 25px;
+  border-radius: 5px;
+  border: 0;
+  cursor: pointer;
+  font-size: 15px;
+  background: #ffc107;
+  color: #704404;
+  font-weight: 500;
+  transition: background 600ms ease;
+}
+.full-page button:hover {
+  background: coral;
+}
+.full-page button i {
+  margin-left: 5px;
+  transition: margin 600ms ease;
+}
+.full-page button i:hover {
+  margin-left: 15px;
+  color: red;
+}/*# sourceMappingURL=style.css.map */
