--- a/css/style.scss
+++ b/css/style.scss
@@ -1,1 +1,110 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    outline: none;
+}
+
+body{
+    background: #fff9c4;
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
+
+    a{
+        text-decoration: none;
+        transition: color 600ms ease;
+    }
+}
+
+img{
+    max-width: 100%;
+}
+
+header{
+    width: 90%;
+    padding: 20px  5%;
+    background: #cbc693;
+    display: flex;
+    justify-content: space-between; // контатент распалагается по бокам
+    align-items: center;
+
+    .logo{
+        font-size: 25px;
+        font-weight: 700;
+    }
+    .nav{
+        position: relative;
+        left: - 50px;
+    }
+
+    a{
+        margin: 0 15px;
+        display: inline-block;
+        color: black;
+
+        &:hover{
+            color:coral;
+        }
+    }
+    .menu{
+        cursor: pointer;
+        color:black;
+        font-size: 35px;
+
+        &:hover{
+            color:coral;
+        }
+    }
+}
+
+.full-page{
+    height: 95vh;
+    background: url(/img/car2.jpg) no-repeat center center;
+    background-attachment: fixed;
+    background-size: cover;
+    background-blend-mode: multiply;
+    background-color: #3b3b3b;
+    text-align: center;
+    color: #fff9c4;
+
+    h1{
+        padding-top: 250px;
+        font-size: 45px;
+        width: 500px;
+        margin: 0 auto;
+    }
+    h3{
+        margin: 20px 0;
+        font-size: 15px;
+        text-transform: uppercase;
+        font-weight: 500;
+        
+    }
+    button{
+        padding: 15px 25px;
+        border-radius: 5px;
+        border: 0;
+        cursor: pointer;
+        font-size: 15px;
+        background: #ffc107;
+        color: #704404;
+        font-weight: 500;
+        transition: background 600ms ease;
+
+        &:hover{
+            background: coral;
+
+        }
+
+        i{
+            margin-left: 5px;
+            transition: margin 600ms ease;
+
+            &:hover{
+                margin-left: 15px;
+                color:red;
+            }
+        }
+
+    }
+}
