--- a/css/style.scss
+++ b/css/style.scss
@@ -59,7 +59,7 @@ header{
 
 .full-page{
     height: 95vh;
-    background: url(/img/car2.jpg) no-repeat center center;
+    background: url(../img/car2.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
     background-blend-mode: multiply;
@@ -108,3 +108,34 @@ header{
 
     }
 }
+
+.features{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    // margin-left: 20%;
+
+    div{
+        width: 100%;
+        text-align: center;
+        margin: 50px 10px;
+
+        img{
+           width: 100%;
+           margin-bottom: 10px;
+           border: 2px solid silver;
+        }
+        h4{
+            font-size: 22px;
+            font-weight: 700;
+            margin-bottom: 10px;
+            color:coral;
+        }
+        p{
+            font-weight: 200;
+        }
+    }
+}
+
+ 
+  
