--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,8 @@ header .menu:hover {
   color: coral;
 }
 
-.full-page {
+.full-page,
+.bg-fixed {
   height: 95vh;
   background: url(../img/car2.jpg) no-repeat center center;
   background-attachment: fixed;
@@ -62,19 +63,22 @@ header .menu:hover {
   text-align: center;
   color: #fff9c4;
 }
-.full-page h1 {
+.full-page h1,
+.bg-fixed h1 {
   padding-top: 250px;
   font-size: 45px;
   width: 500px;
   margin: 0 auto;
 }
-.full-page h3 {
+.full-page h3,
+.bg-fixed h3 {
   margin: 20px 0;
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 500;
 }
-.full-page button {
+.full-page button,
+.bg-fixed button {
   padding: 15px 25px;
   border-radius: 5px;
   border: 0;
@@ -85,14 +89,17 @@ header .menu:hover {
   font-weight: 500;
   transition: background 600ms ease;
 }
-.full-page button:hover {
+.full-page button:hover,
+.bg-fixed button:hover {
   background: coral;
 }
-.full-page button i {
+.full-page button i,
+.bg-fixed button i {
   margin-left: 5px;
   transition: margin 600ms ease;
 }
-.full-page button i:hover {
+.full-page button i:hover,
+.bg-fixed button i:hover {
   margin-left: 15px;
   color: red;
 }
@@ -120,4 +127,22 @@ header .menu:hover {
 }
 .features div p {
   font-weight: 200;
+}
+
+.bg-fixed {
+  height: 300px;
+  color: coral;
+}
+.bg-fixed h3 {
+  font-size: 25px;
+  padding-top: 130px;
+  margin-bottom: 20px;
+}
+.bg-fixed input {
+  padding: 14px 20px;
+  width: 300px;
+  font-size: 14px;
+  border: 0;
+  border-radius: 5px;
+  background: coral;
 }/*# sourceMappingURL=style.css.map */
