--- a/css/style.scss
+++ b/css/style.scss
@@ -57,7 +57,8 @@ header{
     }
 }
 
-.full-page{
+.full-page, 
+.bg-fixed{
     height: 95vh;
     background: url(../img/car2.jpg) no-repeat center center;
     background-attachment: fixed;
@@ -135,6 +136,26 @@ header{
             font-weight: 200;
         }
     }
+}
+
+.bg-fixed{
+ height: 300px;
+ color: coral;
+
+ h3{
+    font-size: 25px;
+    padding-top: 130px;
+    margin-bottom: 20px;
+ }
+
+ input{
+    padding: 14px 20px;
+    width: 300px;
+    font-size: 14px;
+    border: 0;
+    border-radius: 5px;
+    background: coral;
+ }
 }
 
  
